--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Elastic Beanstalk</title>
+    <title>Module-9: OpsWorks Assignment - 3</title>
     <style>
       body {
         color: #ffffff;
@@ -75,7 +75,9 @@
   <body>
     <div class="textColumn">
       <h1>Congratulations</h1>
-      <p>Your first AWS Elastic Beanstalk Node.js application is now running on your own dedicated environment in the AWS Cloud</p>
+      <p>1. Create an OpsWorks sample stack, start the instances and deploy the application
+        2. Add 2 more t2.medium instances
+        3. Make a change to the repository code and check if it reflects in all the instances</p>
     </div>
     <div class="linksColumn">
       <h2>What's Next?</h2>
